# stock-market-analytics

./: .gitignore  README.md  gitignore.txt  pyproject.toml  requirements.txt
.ipynb_checkpoints/: README-checkpoint.md
01-intro-and-data-sources/: README.md  global_stocks.csv  homework.ipynb  introduction-and-data-sources.ipynb
01-intro-and-data-sources/.ipynb_checkpoints/: homework-checkpoint.ipynb  introduction-and-data-sources-checkpoint.ipynb
02-dataframe-analysis/: Module2_Colab_Working_with_the_data.ipynb  README.md  best-logs-name-notebook-IV (1).ipynb  homework.ipynb
03-modeling/: README.md
